# SAC-SWF

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: 00_check_environment.py  01_generate_synthetic.py  02_run_window_principle.py  03_run_synthetic_experiment.py  04_run_real_images.py  05_run_ablation.py  06_make_report_figures.py  07_validate_results.py  08_collect_tables.py  09_prepare_real_images.py  10_run_exp05_benchmark.py  11_run_exp06_learning_comparison.py  12_run_exp07_paper_reproduction.py  13_run_full_pipeline.py  14_prepare_benchmark_data.py  16_check_official_deep_assets.py  17_download_official_deep_weights.py  18_make_paper_style_figures.py  _bootstrap.py  generate_dataflow.py  generate_extra_figures.py  generate_method_figures.py  generate_paper_figures.py  run_all_smoke.py
src/sac_swf/: __init__.py  baselines.py  benchmark.py  experiment.py  filters.py  io.py  learning_baseline.py  metrics.py  official_deep.py  sac_swf.py  side_window.py  structure_tensor.py  synthetic.py  utils.py  visualization.py
tests/: test_smoke.py
